--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
-  "moduleName": "allsopAdminApp",
+  "moduleName": "allsop",
   "overrides": {
     "bootstrap": {
       "main": [
