--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-touch": "^1.4.0",
     "angular-ui-sortable": "~0.13.4",
     "jquery-ui": "~1.11.4",
-    "angular-local-storage": "~0.2.3"
+    "angular-local-storage": "~0.2.3",
+    "angularjs-datepicker": "~0.2.16",
+    "angular-bootstrap": "~1.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
